@@ -15,7 +15,7 @@ interface IProtectionCompat
      * Check if this compatiblity hook allows a player to break blocks at a given
      * location.
      *
-     * @param player The player to check.
+     * @param player The (fake) player to check.
      * @param loc    The location to check.
      * @return True if the player is allowed to break blocks at the given location.
      */
@@ -25,7 +25,7 @@ interface IProtectionCompat
      * Check if this compatiblity hook allows a player to break blocks between two
      * locations.
      *
-     * @param player The player to check.
+     * @param player The (fake) player to check.
      * @param loc1   The start location to check.
      * @param loc2   The end location to check.
      * @return True if the player is allowed to break all the blocks between (and
